--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 		<meta charset="UTF-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Roboto:ital@1&display=swap" rel="stylesheet">
 		<link rel='stylesheet' href='stylesheet/styles.css'>
 		<title>CV Web Ayala Gonzalo</title>
 		<script src="index.js" defer ></script>
@@ -37,9 +38,21 @@
 				<div class='line'></div><p>Welcome to my small world</p><div class='line'></div>
 			
 			</div>
+			
 		
 		</header>
 		<main>
+		
+			<section>
+			
+				<div>
+			
+					<img class='my-photo-2' src='image/mifoto2.jpg'/>
+					<img class='my-photo' src='image/mifoto.png'/>
+			
+				</div>
+			
+			</section>
 		
 			<article class='personal-info'>
 			
@@ -104,6 +117,7 @@
 			
 			</article>
 			
+	
 	
 		</main>
 		
